ui/components/Pagination/index.module.scss
.main {
  display: flex;
  gap: 0.4rem;
  padding: 1rem 1rem 3rem 1rem;
  justify-content: flex-end;
}

.buttonWrapper {
  display: flex;
  gap: 0.4rem;
  align-items: center;
  justify-content: center;
}

.button {
  padding: 0.3rem 0.7rem;
  border-radius: 0.5rem;
  border: none;
  border: 1px solid var(--secondary-color);
  color: var(--secondary-color);
  background-color: transparent;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  &:disabled {
    opacity: 0.5;
    cursor: not-allowed;
  }
  &:hover {
    background-color: var(--secondary-color);
    color: var(--primary-color);
  }
}

.select {
  padding: 0.3rem 0.7rem;
  margin-left: 0.5rem;
  border-radius: 0.5rem;
  border: none;
  border: 1px solid var(--secondary-color);
  color: var(--secondary-color);
  background-color: transparent;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  &:hover {
    border-color: var(--secondary-color);
  }
}

.active {
  background-color: var(--secondary-color);
  color: var(--primary-color);
}

